--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,11 @@ a {
 .header-navigation {
   align-items: center;
   display: flex;
+  margin-right: auto;
 }
 .header-soc {
   display: flex;
   gap: 40px;
- 
 }
 .header-logo {
   color: var(--IRIS, #4d5ae5);
@@ -74,8 +74,8 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top:24px;
-  padding-bottom:24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-menu-link:hover {
   color: var(--OCEAN, #404bbf);
@@ -91,7 +91,7 @@ a {
 }
 .address {
   font-style: normal;
-  display: flex; 
+  display: flex;
   gap: 40px;
 }
 
@@ -102,8 +102,6 @@ a {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
-  
-  
 }
 .container {
   width: 1158px;
@@ -114,10 +112,18 @@ a {
 
 /* SOLUTIONS */
 .solutions {
-  background: var(--NAVY-BLUE, #2e2f42);
+  background-repeat: no-repeat;
+  background-image: url(../images/people-office.jpg);
+  background-image: linear-gradient(to bottom,
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),url(../images/people-office.jpg);
+    background-position: center center;
   text-align: center;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  margin: auto;
+  
 }
 .solutions-title {
   color: var(--WHITE, #fff);
@@ -183,6 +189,17 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+}
+.icon-advantages{
+width: 264px;
+height: 112px;
+background-color: #F4F4FD;
+border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+border-radius: 4px;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 8px;
 }
 .advantages-list {
   display: flex;
@@ -252,6 +269,23 @@ a {
   margin-bottom: 32px;
   text-align: center;
 }
+.soc-icon-link{
+  width: 40px;
+  height: 40px;
+  
+  border: 1px solid #4D5AE5;
+  background-color: #4D5AE5;
+  border-radius: 20px;
+  align-items: center;
+  justify-content:center ;
+  display:inline-flex;
+  gap: 24px;
+  
+}
+.soc-icon{
+  fill: #F4F4FD;
+  flex-shrink: 0;
+}
 /* PORTFOLIO */
 .portfolio {
   padding-top: 120px;
@@ -296,12 +330,10 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  
 }
 .portfolio-list-item {
   background: var(--WHITE, #fff);
   width: calc((100% - 48px) / 3);
-
 }
 
 /* FOOTER */
