--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ a {
   border-bottom: 1px solid #e7e9fc;
   padding-top: 24px;
   padding-bottom: 24px;
+  box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -76,6 +79,8 @@ a {
   letter-spacing: 0.02em;
   padding-top: 24px;
   padding-bottom: 24px;
+  position: relative;
+  color: #404bbf;
 }
 .header-menu-link:hover {
   color: var(--OCEAN, #404bbf);
@@ -118,6 +123,7 @@ a {
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),url(../images/people-office.jpg);
     background-position: center center;
+    background-size: cover;
   text-align: center;
   padding-top: 188px;
   padding-bottom: 188px;
@@ -161,6 +167,7 @@ a {
   border: none;
   margin-left: auto;
   margin-right: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Advantages */
 
@@ -191,7 +198,6 @@ a {
   margin-bottom: 8px;
 }
 .icon-advantages{
-width: 264px;
 height: 112px;
 background-color: #F4F4FD;
 border: 1px solid var(--LIGHT-SLATE, #8E8F99);
@@ -284,7 +290,6 @@ margin-bottom: 8px;
 }
 .soc-icon{
   fill: #F4F4FD;
-  flex-shrink: 0;
 }
 /* PORTFOLIO */
 .portfolio {
