--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ a {
   border: none;
   margin-left: auto;
   margin-right: auto;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Advantages */
 
@@ -264,6 +264,9 @@ margin-bottom: 8px;
   text-align: center;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow:  1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .our-team-text {
   color: var(--SLATE, #434455);
@@ -276,20 +279,31 @@ margin-bottom: 8px;
   text-align: center;
 }
 .soc-icon-link{
+  justify-content:center ;
+  display:flex;
+  gap: 24px; 
+}
+.soc-icon-list{
   width: 40px;
   height: 40px;
-  
-  border: 1px solid #4D5AE5;
-  background-color: #4D5AE5;
-  border-radius: 20px;
-  align-items: center;
-  justify-content:center ;
-  display:inline-flex;
-  gap: 24px;
-  
 }
 .soc-icon{
-  fill: #F4F4FD;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.soc-icon:hover{
+  background-color: #404bbf;
+}
+.soc-icon:focus{
+  background-color: #404bbf;
+}
+.soc-icon-svg{
+  fill: #f4f4fd;
 }
 /* PORTFOLIO */
 .portfolio {
