--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,8 @@ a {
   border-bottom: 1px solid #e7e9fc;
   padding-top: 24px;
   padding-bottom: 24px;
-  box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -49,6 +48,9 @@ a {
 .header-soc {
   display: flex;
   gap: 40px;
+}
+.header-soc-item{
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-logo {
   color: var(--IRIS, #4d5ae5);
@@ -81,6 +83,16 @@ a {
   padding-bottom: 24px;
   position: relative;
   color: #404bbf;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-menu-link::after{
+  content:none;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 .header-menu-link:hover {
   color: var(--OCEAN, #404bbf);
@@ -107,7 +119,11 @@ a {
   letter-spacing: 0.02em;
   display: flex;
   gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.header-list-item{
+ transition:250ms cubic-bezier(0.4, 0, 0.2, 1)
+} 
 .container {
   width: 1158px;
   padding-left: 15px;
@@ -119,17 +135,19 @@ a {
 .solutions {
   background-repeat: no-repeat;
   background-image: url(../images/people-office.jpg);
-  background-image: linear-gradient(to bottom,
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)),url(../images/people-office.jpg);
-    background-position: center center;
-    background-size: cover;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-position: center center;
+  background-size: cover;
   text-align: center;
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
   margin: auto;
-  
 }
 .solutions-title {
   color: var(--WHITE, #fff);
@@ -167,7 +185,7 @@ a {
   border: none;
   margin-left: auto;
   margin-right: auto;
-  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Advantages */
 
@@ -197,15 +215,15 @@ a {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
-.icon-advantages{
-height: 112px;
-background-color: #F4F4FD;
-border: 1px solid var(--LIGHT-SLATE, #8E8F99);
-border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
-margin-bottom: 8px;
+.icon-advantages {
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 .advantages-list {
   display: flex;
@@ -264,8 +282,7 @@ margin-bottom: 8px;
   text-align: center;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  box-shadow:  1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .our-team-text {
@@ -278,16 +295,17 @@ margin-bottom: 8px;
   margin-bottom: 32px;
   text-align: center;
 }
-.soc-icon-link{
-  justify-content:center ;
-  display:flex;
-  gap: 24px; 
+.soc-icon-link {
+  justify-content: center;
+  display: flex;
+  gap: 24px;
 }
-.soc-icon-list{
+.soc-icon-list {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.soc-icon{
+.soc-icon {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -296,13 +314,13 @@ margin-bottom: 8px;
   align-items: center;
   justify-content: center;
 }
-.soc-icon:hover{
+.soc-icon:hover {
   background-color: #404bbf;
 }
-.soc-icon:focus{
+.soc-icon:focus {
   background-color: #404bbf;
 }
-.soc-icon-svg{
+.soc-icon-svg {
   fill: #f4f4fd;
 }
 /* PORTFOLIO */
@@ -353,6 +371,14 @@ margin-bottom: 8px;
 .portfolio-list-item {
   background: var(--WHITE, #fff);
   width: calc((100% - 48px) / 3);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list-item:hover{
+
+transform: translateY(0%);
 }
 
 /* FOOTER */
