--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,10 @@ a {
   padding-bottom: 24px;
   position: relative;
   color: #404bbf;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-menu-link::after{
-  content:none;
+  content:normal;
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -313,6 +313,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-icon:hover {
   background-color: #404bbf;
