--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,8 @@ a {
   display: flex;
   gap: 40px;
 }
-.header-soc-item{
-    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-soc-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-logo {
   color: var(--IRIS, #4d5ae5);
@@ -85,8 +85,8 @@ a {
   color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-menu-link::after{
-  content:normal;
+.header-menu-link::after {
+  content: normal;
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -121,9 +121,9 @@ a {
   gap: 40px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-list-item{
- transition:250ms cubic-bezier(0.4, 0, 0.2, 1)
-} 
+.header-list-item {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .container {
   width: 1158px;
   padding-left: 15px;
@@ -373,13 +373,29 @@ a {
   background: var(--WHITE, #fff);
   width: calc((100% - 48px) / 3);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-list-item:hover{
-
-transform: translateY(0%);
+.text-up:hover {
+  transform: translateY(0%);
+}
+.img-container {
+  position: relative;
+  overflow: hidden;
+}
+.text-up {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px, 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* FOOTER */
@@ -417,4 +433,45 @@ transform: translateY(0%);
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-container-soc {
+  margin-right: 120px;
+}
+.soc-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+
+}
+.footer-link {
+  display: flex;
+  gap: 16px;
+}
+.footer-list {
+  width: 40px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.soc-icon-footer {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.soc-icon-footer:hover {
+  background-color: #31d0aa;
+}
+.soc-icon-footer:focus {
+  background-color: #31d0aa;
 }
