--- a/css/styles.css
+++ b/css/styles.css
@@ -376,12 +376,13 @@ a {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.text-up:hover {
-  transform: translateY(0%);
-}
+
 .img-container {
   position: relative;
   overflow: hidden;
+}
+.portfolio-list-item:hover{
+  transform: translateY(0%)
 }
 .text-up {
   position: absolute;
@@ -390,7 +391,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding: 40px, 32px;
+  padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
@@ -437,10 +438,9 @@ a {
 .footer-container {
   display: flex;
   align-items: baseline;
-  margin-right: 120px;
 }
-.footer-container-soc {
-  
+.footer-container-logo{
+ margin-right: 120px;
 }
 .soc-media {
   font-weight: 500;
@@ -458,7 +458,7 @@ a {
 .footer-list {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 
 }
 .soc-icon-footer {
@@ -469,7 +469,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-icon-footer:hover {
   background-color: #31d0aa;
