--- a/css/styles.css
+++ b/css/styles.css
@@ -375,16 +375,18 @@ a {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .img-container {
-  position: relative;
-  overflow: hidden;
+ position: relative;
+    overflow: hidden;
 }
-.portfolio-list-item:hover{
-  transform: translateY(0%)
+.portfolio-list-item:hover .text-up{
+  transform: translateY(0%);
 }
 .text-up {
+  
   position: absolute;
   top: 0;
   font-size: 16px;
